ZumZumFinancials_Dev1/src/objects/Schedule_Reminders__c.object
<CustomObject>
    <fields>
        <fullName>EmailTemplateId__c</fullName>
        <label>EmailTemplateId</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reminder_Criteria__c</fullName>
        <label>Reminder Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>Before Invoice Due Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Invoice Due Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zero_val__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zero_val</label>
        <type>Checkbox</type>
    </fields>
    <label>Schedule Reminders</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Schedule Reminders Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Reminders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>